@@ -1,5 +1,8 @@
 2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/hara-kiri-engraver.cc (acknowledge_grob): split
+	Hara_kiri_engraver in separate file.
+
 	* lily/slur-configuration.cc (score_encompass): oops, <? to min()
 	translation went wrong. Fixes vertically translated slurs.
 
